--- a/src/styles/metatronstyle_mobile.css
+++ b/src/styles/metatronstyle_mobile.css
@@ -108,7 +108,7 @@ body {
     transition: 3s ease-in;
     position: relative;
     border: 1px solid rgba(255, 255, 255, 0.2);
-    z-index: 999; }
+    z-index: 998; }
     .m-grid-container .circle:after {
       content: "";
       width: 100%;
